--- a/skill.html
+++ b/skill.html
@@ -9,9 +9,9 @@
 		<div class="size">
 			<div class="logo"><a href = "#">PortFo<span>lio.</span></a></div>
 			<ul class ="menu">
-				<li><a href="file:///C:/xampp/htdocs/webprogram/E%20PortFolio.html">Home</a></li>
-				<li><a href="file:///C:/xampp/htdocs/webprogram/skill.html">Skill</a></li>
-				<li><a href="file:///C:/xampp/htdocs/webprogram/Contact.html">Contact</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="skill.html">Skill</a></li>
+				<li><a href="Contact.html">Contact</a></li>
 			</ul>
 		</div>
 	</nav>
