--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 			<div class="logo"><a href = "#">PortFo<span>lio.</span></a></div>
 			<ul class ="menu">
 				<li><a href="#">Home</a></li>
-				<li><a href="file:///C:/xampp/htdocs/webprogram/skill.html">Skill</a></li>
-				<li><a href="file:///C:/xampp/htdocs/webprogram/Contact.html">Contact</a></li>
+				<li><a href="skill.html">Skill</a></li>
+				<li><a href="Contact.html">Contact</a></li>
 			</ul>
 		</div>
 	</nav>
