--- a/skill.html
+++ b/skill.html
@@ -73,7 +73,7 @@
                         </div>
                     </div>
                     <a href="https://resume.io/r/je6tiHPCc">Read more</a>
-                    <a href="file:///C:/xampp/htdocs/webprogram/Contact.html">Contact</a>
+                    <a href="Contact.html">Contact</a>
                 </div>
             </div>
         </div>
