--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<div class="collum right" >
 					<div class="text">I'm Syukri Othman and I'm a <span>UiTM student</span></div>
 					<p>I live in Ipoh Perak. i was born on october 8, 2001. i am a fourth year education at University Technology Mara. I specialize in computer science studies. I am a talkative and friendly person at the same time. I like to play video games and football if I have a free time. I love captivating music and hard working people inspire me.</p>
-					<a href="file:///C:/xampp/htdocs/webprogram/skill.html"> Skill </a>
+					<a href="skill.html"> Skill </a>
 				</div>
 			</div>
 		</div>
